--- a/src/securitycamera/config.json
+++ b/src/securitycamera/config.json
@@ -1,16 +1,15 @@
 {
   "cameras": {
     "cam0": {
-      "driver": "MockDriver",
-      "width": 1280,
-      "height": 720,
-      "framerate": 1
-    },
-    "cam1": {
-      "driver": "MockDriver",
-      "width": 1280,
-      "height": 720,
-      "framerate": 1
+      "width": 4056,
+      "height": 2288,
+      "framerate": 15,
+      "sensor_id": 0,
+      "overlay": true,
+      "save": {
+        "playback_framerate": 30,
+        "record_framerate": 1
+      }
     }
   },
   "log_level": "DEBUG"
