--- a/src/securitycamera/config.json
+++ b/src/securitycamera/config.json
@@ -3,8 +3,19 @@
     "cam0": {
       "width": 4056,
       "height": 2288,
-      "framerate": 15,
+      "framerate": 30,
       "sensor_id": 0,
+      "overlay": true,
+      "save": {
+        "playback_framerate": 30,
+        "record_framerate": 1
+      }
+    },
+    "cam1": {
+      "width": 4056,
+      "height": 2288,
+      "framerate": 30,
+      "sensor_id": 1,
       "overlay": true,
       "save": {
         "playback_framerate": 30,
