--- a/requirements.txt
+++ b/requirements.txt
@@ -1,13 +1,25 @@
+aiocontextvars==0.2.2
 asgiref==3.4.1
+certifi==2021.5.30
+charset-normalizer==2.0.6
 click==8.0.1
-colorama==0.4.4
+contextvars==2.4
+dataclasses==0.8
 fastapi==0.68.1
 h11==0.12.0
+idna==3.2
+immutables==0.16
+importlib-metadata==4.8.1
 loguru==0.5.3
-numpy==1.21.2
+numpy==1.19.5
 Pillow==8.3.2
+pkg-resources==0.0.0
+pycairo==1.20.1
 pydantic==1.8.2
+PyGObject==3.40.1
+requests==2.26.0
 starlette==0.14.2
 typing-extensions==3.10.0.2
+urllib3==1.26.7
 uvicorn==0.15.0
-win32-setctime==1.0.3
+zipp==3.5.0
