--- a/requirements.txt
+++ b/requirements.txt
@@ -1,28 +1,15 @@
-asgiref==3.4.1
-bcrypt==3.2.0
-certifi==2021.5.30
-cffi==1.14.6
-charset-normalizer==2.0.5
-click==8.0.1
-colorama==0.4.4
-cryptography==35.0.0
-ecdsa==0.17.0
-fastapi==0.68.1
-h11==0.12.0
-idna==3.2
-loguru==0.5.3
-numpy==1.21.2
-passlib==1.7.4
-Pillow==8.3.2
-pyasn1==0.4.8
-pycparser==2.20
-pydantic==1.8.2
-python-jose==3.3.0
-requests==2.26.0
-rsa==4.7.2
-six==1.16.0
-starlette==0.14.2
-typing-extensions==3.10.0.2
-urllib3==1.26.6
-uvicorn==0.15.0
-win32-setctime==1.0.3
+bcrypt
+fastapi
+loguru
+numpy
+Pillow
+pydantic
+python-jose
+requests
+starlette
+urllib3
+uvicorn
+python-jose
+passlib
+jinja2
+python-multipart
